k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: adding-numbers-api-namespace
  labels:
    name: adding-numbers-api
